--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -190,6 +190,7 @@ S_B_6 : "Cʜᴀɴɴᴇʟ"
 S_B_7 : "Sᴏᴜʀᴄᴇ ᴄᴏᴅᴇ"
 S_B_8 : "👀 ʏᴏᴜᴛᴜʙᴇ 👀"
 S_B_9 : "🥀 sᴜᴩᴩᴏʀᴛ 🥀"
+S_B_0 : "ᴅᴏɴᴀᴛᴇ"
 
 H_B_1 : "Aᴅᴍɪɴ"
 H_B_2 : "Aᴜᴛʜ"
